#4: add admin auth and OpenAPI servers
